MQTT: Integrate brokered subscriber API
 - Integrate MQTT receive with Subscriber APIs
 - Add brokerTransportSettings for DataSetReader and DataSetWriter
 - Tested with Mosquitto MQTT broker
 - UADP encoding and decoding is used
 - "DateTime" value is sent by the MQTT Publisher.
   This is received in the information model of MQTT Subscriber, verified
   through free opcua-client GUI application
 - Last three commits are taken from pubsub_mqtt_clean_branch
 - The topic to be published is set in addWriterGroup API
 - The topic to be subscribed is set in addMqttSubscription function call
   of addDataSetReader API

Change-Id: I8a9a905418deb8e44965a0fa6713c867f16d45aa

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -325,9 +325,11 @@ if(UA_ENABLE_PUBSUB)
         endif()
     endif()
     if(UA_ENABLE_PUBSUB_MQTT)
-        add_executable(check_pubsub_connection_mqtt pubsub/check_pubsub_connection_mqtt.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
-        target_link_libraries(check_pubsub_connection_mqtt ${LIBS})
-        add_test_valgrind(pubsub_connection_mqtt ${TESTS_BINARY_DIR}/check_pubsub_connection_mqtt)
+        if(NOT WIN32)
+            add_executable(check_pubsub_connection_mqtt pubsub/check_pubsub_connection_mqtt.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
+            target_link_libraries(check_pubsub_connection_mqtt ${LIBS})
+            add_test_valgrind(pubsub_connection_mqtt ${TESTS_BINARY_DIR}/check_pubsub_connection_mqtt)
+        endif()
     endif()
 endif()
 
