--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -34,6 +34,7 @@
 #cmakedefine UA_ENABLE_DA
 #cmakedefine UA_ENABLE_ENCRYPTION
 #cmakedefine UA_ENABLE_HISTORIZING
+#cmakedefine UA_ENABLE_MICRO_EMB_DEV_PROFILE
 #cmakedefine UA_ENABLE_EXPERIMENTAL_HISTORIZING
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS_EVENTS
 #cmakedefine UA_ENABLE_JSON_ENCODING
