MQTT: Add Standalone MQTT publisher application
 - Modify examples/CMakelists.txt to generate
   executable for Standalone MQTT Publisher

Change-Id: Ifdd20ffa47d27e4a6a8ad5bbbe04c81140758b9c

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -203,6 +203,7 @@ if(UA_ENABLE_PUBSUB)
         if(NOT WIN32)
             include_directories(${PROJECT_SOURCE_DIR}/../plugins)
             add_example(tutorial_pubsub_mqtt pubsub/tutorial_pubsub_mqtt.c)
+            add_example(tutorial_pubsub_mqtt_publish pubsub/tutorial_pubsub_mqtt_publish.c)
         endif()
     endif()
 endif()
