MQTT: Add Standalone Subscriber application
 - Modify examples/CMakelists.txt file to generate executable
   for standalone subscriber
 - TODO: unsubscribe to the topic when application is closed

Change-Id: Ia68578c36099345221d9e8532ed85428f478ecb0

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -204,6 +204,7 @@ if(UA_ENABLE_PUBSUB)
         if(NOT WIN32)
             include_directories(${PROJECT_SOURCE_DIR}/../plugins)
             add_example(tutorial_pubsub_mqtt_publish pubsub/tutorial_pubsub_mqtt_publish.c)
+            add_example(tutorial_pubsub_mqtt_subscribe pubsub/tutorial_pubsub_mqtt_subscribe.c)
         endif()
     endif()
 endif()
