feat(pubsub): added pubsub configuration lock and pubsub state machine skeleton

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -193,6 +193,7 @@ if(UA_ENABLE_PUBSUB)
     add_example(tutorial_pubsub_connection pubsub/tutorial_pubsub_connection.c)
     add_example(tutorial_pubsub_publish pubsub/tutorial_pubsub_publish.c)
 	add_example(server_pubsub_publisher_iop pubsub/server_pubsub_publisher_iop.c)
+	add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
     if(UA_ENABLE_AMALGAMATION)
         message(WARNING "PubSub subscriber tutorial (preview) can not be used with AMALGAMATION. Skipping tutorial_pubsub_subscribe.")
     else(NOT UA_ENABLE_AMALGAMATION)
