Tests: Unit Tests for Async Methods

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -335,6 +335,12 @@ if(UA_ENABLE_SUBSCRIPTIONS)
     add_test_valgrind(server_monitoringspeed ${TESTS_BINARY_DIR}/check_server_monitoringspeed)
 endif()
 
+if(UA_ENABLE_ASYNCOPERATIONS)
+    add_executable(check_server_asyncop server/check_server_asyncop.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-testplugins>)
+    target_link_libraries(check_server_asyncop ${LIBS})
+    add_test_valgrind(server_asyncop ${TESTS_BINARY_DIR}/check_server_asyncop)
+endif()
+
 # Test Client
 
 add_executable(check_client client/check_client.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-testplugins>)
