ci: Add multiarch (big endian) build on azure

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,3 +10,4 @@ trigger:
 jobs:
     - template: ./.azure-pipelines/azure-pipelines-win.yml
     - template: ./.azure-pipelines/azure-pipelines-dist.yml
+    - template: ./.azure-pipelines/azure-pipelines-qemu.yml
