--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -56,6 +56,11 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/bin/examples)
 
 macro(add_example EXAMPLE_NAME EXAMPLE_SOURCE)
   add_executable(${EXAMPLE_NAME} ${STATIC_OBJECTS} ${EXAMPLE_SOURCE} ${ARGN} ${PROJECT_SOURCE_DIR}/common.h)
+  if(UA_ENABLE_PUBSUB)
+      if(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
+          target_link_libraries(${EXAMPLE_NAME} open62541 ${open62541_LIBRARIES} ua_pubsub_custom_manager)
+      endif()
+  endif()
   target_link_libraries(${EXAMPLE_NAME} open62541::open62541)
   assign_source_group(${EXAMPLE_SOURCE})
   set_target_properties(${EXAMPLE_NAME} PROPERTIES FOLDER "open62541/examples")
@@ -181,12 +186,56 @@ add_subdirectory(nodeset)
 ####################
 
 if(UA_ENABLE_PUBSUB)
-    add_example(tutorial_pubsub_connection pubsub/tutorial_pubsub_connection.c)
-    add_example(tutorial_pubsub_publish pubsub/tutorial_pubsub_publish.c)
-    if(UA_ENABLE_AMALGAMATION)
-        message(WARNING "PubSub subscriber tutorial (preview) can not be used with AMALGAMATION. Skipping tutorial_pubsub_subscribe.")
-    else(NOT UA_ENABLE_AMALGAMATION)
-        add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
-        add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
+    if(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
+        include_directories(${CMAKE_SOURCE_DIR}/pubsub_realtime/udp_socket)
+        include_directories(${CMAKE_SOURCE_DIR}/include)
+        include_directories(${CMAKE_SOURCE_DIR}/plugins)
+        include_directories(${CMAKE_SOURCE_DIR}/plugins/include)
+        include_directories(${CMAKE_BINARY_DIR})
+        include_directories(${CMAKE_BINARY_DIR}/src_generated)
+        include_directories(${CMAKE_SOURCE_DIR}/arch)
+        include_directories(${CMAKE_SOURCE_DIR}/arch/posix)
+        include_directories(${CMAKE_SOURCE_DIR}/examples)
+        include_directories(${CMAKE_SOURCE_DIR}/src/server)
+        include_directories(${CMAKE_SOURCE_DIR}/src)
+        include_directories(${CMAKE_SOURCE_DIR}/src/pubsub)
+        include_directories(${CMAKE_SOURCE_DIR}/deps)
+        add_definitions(-D_GNU_SOURCE)
     endif()
+endif()
+
+if(UA_ENABLE_PUBSUB)
+    if(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
+        add_library(ua_pubsub_custom_manager ${CMAKE_SOURCE_DIR}/src/pubsub/ua_pubsub_custom_manager.c)
+    endif()
+endif()
+
+if(UA_ENABLE_PUBSUB)
+    if(NOT UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
+        add_example(tutorial_pubsub_connection pubsub/tutorial_pubsub_connection.c)
+        add_example(tutorial_pubsub_publish pubsub/tutorial_pubsub_publish.c)
+        if(UA_ENABLE_AMALGAMATION)
+            message(WARNING "PubSub subscriber tutorial (preview) can not be used with AMALGAMATION. Skipping tutorial_pubsub_subscribe.")
+        else(NOT UA_ENABLE_AMALGAMATION)
+            add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
+            add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
+        endif()
+    else()
+        assign_source_group(${EXAMPLE_SOURCE})
+        message(WARNING "PubSub subscriber and publisher tutorial can not be used with UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING")
+        add_executable(TSN_ETF_publisher pubsub_realtime/udp_socket/TSN_ETF_publisher.c)
+
+        add_executable(TSN_ETF_loopback pubsub_realtime/udp_socket/TSN_ETF_loopback.c)
+
+        set_target_properties(TSN_ETF_publisher PROPERTIES FOLDER "open62541/examples")
+        set_target_properties(TSN_ETF_loopback PROPERTIES FOLDER "open62541/examples")
+
+        set_target_properties(TSN_ETF_publisher PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+        set_target_properties(TSN_ETF_loopback PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+
+        target_link_libraries(TSN_ETF_publisher open62541 ${open62541_LIBRARIES} rt pthread mbedtls mbedx509 mbedcrypto) #original line with crypto
+        target_link_libraries(TSN_ETF_loopback open62541 ${open62541_LIBRARIES} rt pthread mbedtls mbedx509 mbedcrypto)
+
+    endif()
+
 endif()
