ci: Allow failure of sonarcube build

--- a/.travis.yml
+++ b/.travis.yml
@@ -262,6 +262,8 @@ matrix:
     # clang-format code analysis
     - env:
         - CLANG_FORMAT=true
+    - env:
+        - SONAR=true
 
 cache:
   pip: true
