fix(core): Install dependencies to /include instead of /include/open62541

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1297,7 +1297,11 @@ if(NOT UA_ENABLE_AMALGAMATION)
         string(REPLACE ${BASE_PATH_DEPS} "" file ${file})
 
         get_filename_component( dir ${file} DIRECTORY )
-        install( FILES ${full_path} DESTINATION include/open62541${dir} )
+        if(${full_path} MATCHES "deps")
+            install( FILES ${full_path} DESTINATION include${dir} )
+        else()
+            install( FILES ${full_path} DESTINATION include/open62541${dir} )
+        endif()
     endforeach()
 
 else()
